integ-tests/tests/snapshots/de__custom_error.snap
---
source: integ-tests/tests/de.rs
expression: error
---
error[out-of-range]: number is out of range of 'u8'
  ┌─ custom_error:1:8
  │
1 │ year = 40_000
  │        ^^^^^^

error[custom]: this-is-deprecated is deprecated
  ┌─ custom_error:2:23
  │
2 │ this-is-deprecated = 'this should not be here'
  │                       ^^^^^^^^^^^^^^^^^^^^^^^


